--- a/profile.html
+++ b/profile.html
@@ -146,6 +146,14 @@
                         <li><img src="images/profile-study.png" alt="">Went to Kolkata</li>
                         <li><img src="images/profile-home.png" alt="">Lives in Durgapur</li>
                         <li><img src="images/profile-location.png" alt="">From West Bengal</li>
+                        <li><img src="images/profile-love.png" alt="">Single</li>
+                        <li><img src="images/profile-join.png" alt="">Join April 2022</li>
+                        <a href="https://www.facebook.com/sourik.parui" target="_blank"><li><img src="images/Facebook-logo.png" alt="">Sourik parui</li></a>
+                        <a href="https://twitter.com/SourikParui" target="_blank"><li><img src="images/profile-twiter.png" alt="">@Sourik100403</li></a>
+                        <a href="https://www.instagram.com/sourikparui100403/" target="_blank"><li><img src="images/profile-insta.png" alt="">Sourikparui100403</li></a>
+                        <a href="https://linkedin.com/in/sourik-parui-842130201" target="_blank"><li><img src="images/profile-linkdine.png" alt="">Linkdin</li></a>
+                        <a href="https://github.com/sourik100403" target="_blank"><li><img src="images/profile-git.png" alt="">github</li></a>
+                        
 
                     </ul>
 
